# vibot

./: Cargo.toml  Dockerfile  deploy.yml  dev.sh
src/: main.rs
