[package]
name = "vibot"
version = "0.1.0"
authors = ["Kon Tsaki <kontsaki@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.9", features = ["json"] }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"
tokio = { version = "0.3.5", features = ["full"] }
warp = "0.2.5"
