[package]
name = "vibot"
version = "0.1.0"
authors = ["Kon Tsaki <kontsaki@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { version = "*", features = ["tokio-comp"] }
reqwest = { version = "*", features = ["json"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
tokio = { version = "*", features = ["full"] }
warp = "*"
